--- a/source/_posts/2017-02-04-GCC_note.md
+++ b/source/_posts/2017-02-04-GCC_note.md
@@ -4,7 +4,7 @@ title:      GCC note
 date: 2017-02-04 14:22:00 +0800
 keywords:   
 categories:
-	- computer science
+	- CS
 tags:		
 	- GCC
 ---
@@ -39,14 +39,14 @@ $ gcc -S *.c
 
 * Some  extension names of the sources files which are supported by GCC  
 
-Extension_Name | Source_File  
----------------|--------------  
-.c             | C Source File
-.C / .cc / .cxx|C++ Source File
-.m             |Object-C Source File
-.i			   |C Source File after preprocessing
-.ii | C++ Source File after preprocessing
-.s / .S | Assembly Source File
-.h | Preprocess File / Head File
-.o | Object File
-.a | Archive File
+| Extension_Name  | Source_File                         |
+| --------------- | ----------------------------------- |
+| .c              | C Source File                       |
+| .C / .cc / .cxx | C++ Source File                     |
+| .m              | Object-C Source File                |
+| .i              | C Source File after preprocessing   |
+| .ii             | C++ Source File after preprocessing |
+| .s / .S         | Assembly Source File                |
+| .h              | Preprocess File / Head File         |
+| .o              | Object File                         |
+| .a              | Archive File                        |
