--- a/source/_posts/2017-09-13-dictum.md
+++ b/source/_posts/2017-09-13-dictum.md
@@ -15,7 +15,7 @@ Francis Bacon[UK] -
 ---
 王阳明[明] -  
 >宁静于内，无敌于外。
->(Peaceful inside, invincible outside.)  
+>(Quiet inside, invincible outside.)  
 >心外无理，心外无物，心外无事。
 >你未看此花时，此花与汝心同归于寂。你来看此花时，则此花颜色一时明白起来。  
 >汝以不得第为耻，吾以不得第动心而为耻。  
