--- a/source/_posts/2017-12-15-ebooks.md
+++ b/source/_posts/2017-12-15-ebooks.md
@@ -17,6 +17,8 @@ tags:
 
 [Linux Story](https://linuxstory.org/free-chinese-programming-books/)  
 
+[cn.linux.vbird.org](http://cn.linux.vbird.org/) 
+
 ##### Github
 
 [https://github.com/EbookFoundation](https://github.com/EbookFoundation)  
