--- a/source/_posts/2017-12-15-ebooks.md
+++ b/source/_posts/2017-12-15-ebooks.md
@@ -19,6 +19,10 @@ tags:
 
 [cn.linux.vbird.org](http://cn.linux.vbird.org/) 
 
+[Project Gutenberg](http://www.gutenberg.org/) 
+
+[PDFDRIVE](https://www.pdfdrive.net/) 
+
 ##### Github
 
 [https://github.com/EbookFoundation](https://github.com/EbookFoundation)  
