--- a/source/_posts/2017-12-15-ebooks.md
+++ b/source/_posts/2017-12-15-ebooks.md
@@ -9,7 +9,7 @@ tags:
 	- URL
 ---
 
-##### Website
+##### IT 
 
 [电子书屋](https://ebook.studyits.cn)  
 
@@ -19,9 +19,17 @@ tags:
 
 [cn.linux.vbird.org](http://cn.linux.vbird.org/) 
 
-[Project Gutenberg](http://www.gutenberg.org/) 
+[FreeComputerBooks.com](http://freecomputerbooks.com/) 
 
-[PDFDRIVE](https://www.pdfdrive.net/) 
+[FreeTechBooks](http://www.freetechbooks.com/)(legal) 
+
+[IT_eBooks](http://it-ebooks.info/) 
+
+[Wow!_eBook](http://www.wowebook.pw/) 
+
+[All_IT_eBooks](http://www.allitebooks.com/) 
+
+
 
 ##### Github
 
@@ -35,4 +43,139 @@ tags:
 
 
 
+#### Search Engine  
+
+[Jiumo_E-Book_Search鸠摩搜索](https://www.jiumodiary.com/)(Kindle Resource Search Engine) 
+
+[manybooks](http://manybooks.net/) 
+
+[HathiTrust](https://www.hathitrust.org/) 
+
+[书伴](https://bookfere.com/) 
+
+[QumranShop](http://qumran.com/) 
+
+[电子资源网站汇总](http://oxingtui.com/other/resource.htm) 
+
+
+
+##### ENU 
+[Library Genesis](http://libgen.io/) 
+
+[libgen.pw](https://libgen.pw/) 
+
+[Great_Books_Online](http://www.bartleby.com/) 
+
+[The_Online_Books_Page](http://onlinebooks.library.upenn.edu/) 
+
+[Project Gutenberg](http://www.gutenberg.org/) 
+
+[UC_Process_E-Books_Collections, 1982-2004](https://publishing.cdlib.org/ucpressebooks/) 
+
+[PDFDRIVE](https://www.pdfdrive.net/) 
+
+[ebookhunter](http://ebookhunter.ch/ ) 
+
+[B-OK](http://b-ok.org/) 
+
+[FreeBookSpot](http://www.freebookspot.es/) 
+
+[Free_eBooks_for_Life!](https://www.free-ebooks.net/) 
+
+[getfreeebooks](https://www.getfreeebooks.com/)(legal) 
+
+[Bookyards](https://www.bookyards.com/en/welcome)(education)  
+
+[eBook_Lobbye](http://www.ebooklobby.com/) 
+
+[PLANET_PUBLISH](http://www.planetpublish.com/)(new novel pdf e-books) 
+
+[DailyLit](https://dailylit.com/)(support to be fed by email or RSS reader)  
+
+[Wiki books](https://en.wikibooks.org/wiki/Main_Page) 
+
+[archive.org](https://archive.org/) 
+
+[Ebook3000](http://ebook3000.com/) 
+
+[BookSC](http://booksc.org/) 
+
+[Booksee.org](http://en.booksee.org/) 
+
+[Books-share.com](http://www.books-share.com/) 
+
+[七彩用于QcENGLISH.com](http://www.qcenglish.com/) 
+
+[BookDL](https://bookdl.com/) 
+
+[OPEN_LIBRARY](https://openlibrary.org/) 
+
+[Feedbooks](http://www.feedbooks.com/) 
+
+[Ebook4Expert](https://ebook4expert.com/) 
+
+[Obooko](https://www.obooko.com/) 
+
+[EBOOKEE](https://ebookee.org/) 
+
+[epubBooks](https://www.epubbooks.com/)(epub) 
+
+[SCRIBD](https://zh.scribd.com/) 
+
+[Posner Memorial Collection](http://posner.library.cmu.edu/Posner/)(Incomplete downloading) 
+
+######  Scholar  
+
+[scholar.google.com](https://scholar.google.com/) 
+
+[The_National_Academies Press](https://www.nap.edu/)(expensive) 
+
+###### Literature  
+[Classical Authors Index](http://selfknowledge.com/index.shtml) 
+
+[PLANET_EBOOK](https://www.planetebook.com/) 
+
+###### History of Economic Thought  
+
+[McMaster University Archive for the History of Economic Thought](https://socialsciences.mcmaster.ca/econ/ugcm/3ll3/) 
+
+
+
+#### FRA 
+
+[Gallica](http://gallica.bnf.fr/) 
+
+
+
+#### Western Classics  
+
+[PERSEUS_DIGITAL_LIBRARY](http://www.perseus.tufts.edu/hopper/) 
+
+
+
+#### Chinese Internet Sources of E-Books 
+
+[微盘Vdisk](http://vdisk.weibo.com/) 
+
+[掌上书苑](https://www.cnepub.com/) 
+
+##### Chinese Classics 
+
+[书格](https://shuge.org/) 
+
+[HiPDA](http://www.hi-pda.com/forum/forumdisplay.php?fid=59) 
+
+[读远](http://readfar.com/)(Download Limit Everday) 
+
+[Readfree](http://readfree.me/accounts/login/?next=/)(Download Limit Everyday: 6) 
+
+[好读](http://haodoo.net/)(TaiWan)  
+
+##### APP 
+
+[微信读书(WeRead)](http://weread.qq.com/)  
+
+* Search '纯爱.英文馆' 
+
+[网易云阅读](http://yuedu.163.com/) 
 
